add user manipulation endpoints for admin
