# controllers/device.go
@@ -34,24 +34,24 @@ func (d *DeviceController) ListDevice(c echo.Context) error {
 }
 
 // Get -
-// @description Return the `Device` with the given `deviceId`.
+// @description Return the `Device` with the given `id`.
 // @id getDevice
 // @tags device
 // @summary get a device by id
 // @produce json
 // @security jwt
-// @param deviceId path int true "The id of the `Device` to get"
+// @param id path int true "The id of the `Device` to get"
 // @success 200 {object} models.Device
-// @router /device/{deviceId} [get]
+// @router /device/{id} [get]
 func (d *DeviceController) Get(c echo.Context) error {
-	deviceID, err := strconv.Atoi(c.Param("deviceId"))
+	id, err := strconv.Atoi(c.Param("id"))
 
 	if err != nil {
 		jsonErr := models.NewBadRequestError()
 		return echo.NewHTTPError(jsonErr.Status, jsonErr)
 	}
 
-	device, jsonErr := models.GetDevice(d.DB, int64(deviceID))
+	device, jsonErr := models.GetDevice(d.DB, int64(id))
 	if jsonErr != nil {
 		return echo.NewHTTPError(jsonErr.Status, jsonErr)
 	}
@@ -60,19 +60,19 @@ func (d *DeviceController) Get(c echo.Context) error {
 }
 
 // PowerOn -
-// @description Boot the `Device` with the given `deviceId`.
+// @description Boot the `Device` with the given `id`.
 // @id powerOn
 // @tags device
 // @summary Boot a device
 // @produce json
 // @security jwt
-// @param deviceId path int true "The device id to turn on"
+// @param id path int true "The device id to turn on"
 // @success 204
-// @router /device/{deviceId}/on [post]
+// @router /device/{id}/on [post]
 func (d *DeviceController) PowerOn(c echo.Context) error {
-	port := c.Param("deviceId")
-	deviceID, _ := strconv.Atoi(port)
-	device, jsonErr := models.GetDevice(d.DB, int64(deviceID))
+	port := c.Param("id")
+	id, _ := strconv.Atoi(port)
+	device, jsonErr := models.GetDevice(d.DB, int64(id))
 	if jsonErr != nil {
 		return echo.NewHTTPError(jsonErr.Status, jsonErr)
 	}
@@ -101,13 +101,13 @@ func (d *DeviceController) PowerOn(c echo.Context) error {
 // @summary Shut down a device
 // @produce json
 // @security jwt
-// @param deviceId path int true "The device id to turn off"
+// @param id path int true "The device id to turn off"
 // @success 204
-// @router /device/{deviceId}/off [post]
+// @router /device/{id}/off [post]
 func (d *DeviceController) PowerOff(c echo.Context) error {
-	port := c.Param("deviceId")
-	deviceID, _ := strconv.Atoi(port)
-	device, jsonErr := models.GetDevice(d.DB, int64(deviceID))
+	port := c.Param("id")
+	id, _ := strconv.Atoi(port)
+	device, jsonErr := models.GetDevice(d.DB, int64(id))
 	if jsonErr != nil {
 		return echo.NewHTTPError(jsonErr.Status, jsonErr)
 	}
